--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "start": "node index.js",
+    "test": "node tests/test.js"
   },
   "author": "Oleksandr Yaroshenko",
   "license": "ISC",
@@ -11,10 +12,12 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
-    "puppeteer": "^18.2.1"
+    "fs": "^0.0.1-security",
+    "puppeteer": "^18.2.1",
+    "typopo": "^2.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
   },
-  "type":"module"
+  "type": "module"
 }
