--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "puppeteer": "^18.2.1",
-    "typopo": "^2.5.4"
+    "puppeteer": "^18.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
