--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "description": "",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "excel4node": "^1.8.0",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
     "puppeteer": "^18.2.1"
   },
   "devDependencies": {
